--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
     window.onload = function() {
       // TODO: Keep working on the Turtle / canvas element and init interface, as well as L System draw rules
       const turtle = new LTurtle(1000, 1000, x=500, y=0);
-      const system = ContextFreeLSystem.get_system("algea");
+      const system = ContextFreeLSystem.get_system("plant");
       // for(let i=1; i<=5; i++) {
       //   // console.log("n=" + i + " | system " + system.step_n(i));
       //   // console.log("move step")
       //   turtle.move(50);
       // }
-      turtle.process_lstr(system.step_n(4), null, 10);
+      turtle.process_lstr(system.step_n(4), LTurtle.get_system_draw_rules("plant"));
     }
   </script>
 </body>
