Concatenation bugfix for l-systems not generating

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       console.log(system);
       console.log(LTurtle.get_system_draw_rules(system_name))
       const completed_system = system.step_n(iterations)
-      console.log(completed_system);
+      console.log('LSYSTEM TEXT ' + completed_system);
       turtle.process_lstr(completed_system, LTurtle.get_system_draw_rules(system_name));
     }
   </script>
