Small debug changes and remove debug print statements

--- a/public/index.html
+++ b/public/index.html
@@ -14,20 +14,12 @@
     // Load from global/UMD library (dynamic content is added to l-system-root so I use window onload)
     // TODO: MISSING TYPESCRIPT TYPES
     window.onload = function() {
-      // TODO: Keep working on the Turtle / canvas element and init interface, as well as L System draw rules
+      // TODO: Keep working on the Turtle / canvas element and init, customize, error interfaces, as well as L System draw rules and system overlap
       const turtle = new LTurtle(1000, 1000, x=500, y=0);
-      // for(let i=1; i<=5; i++) {
-        //   // console.log("n=" + i + " | system " + system.step_n(i));
-        //   // console.log("move step")
-        //   turtle.move(50);
-        // }
       const system_name = "plant";
       const iterations = 4;
       const system = ContextFreeLSystem.get_system(system_name);
-      console.log(system);
-      console.log(LTurtle.get_system_draw_rules(system_name))
       const completed_system = system.step_n(iterations)
-      console.log('LSYSTEM TEXT ' + completed_system);
       turtle.process_lstr(completed_system, LTurtle.get_system_draw_rules(system_name));
     }
   </script>
