Some module changes. Exports will have to be nuked with packaging constraints

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lindenmayer System Explorer</title>
   <script type="text/javascript" src="./l-turtle.js"></script>
-  <script type="text/javascript" src="./l-sys-lib.js"></script>
+  <script type="text/javascript" src="./l-sys-lib-core.js"></script>
 </head>
 <body>
   <canvas id="turtle-canvas" style="width: 1000px; height: 1000px;"></canvas>
